# atlas-rag-enterprise

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yml
notebooks/: 01_document_audit.ipynb
src/enterprise_rag/: __init__.py  agents.py  architecture.py  chunking.py  cli.py  config.py  evaluation.py  evaluation_providers.py  generation.py  generation_providers.py  indexing.py  ingestion.py  io.py  memory.py  models.py  quality.py  retrieval.py  service.py  ui.py  visuals.py
tests/: test_agents.py  test_architecture.py  test_chunking.py  test_evaluation.py  test_evaluation_providers.py  test_generation.py  test_generation_providers.py  test_indexing.py  test_memory.py  test_quality.py  test_retrieval.py  test_service.py  test_visuals.py
